# Synx-AI

./: LICENSE  README.md  __init__.py  app.py  chats.db  pyproject.toml  setup.py
templates/: index.html
